--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -25,6 +25,7 @@
       integrity="sha512-UyNhw5RNpQaCai2EdC+Js0QL4RlVmiq41DkmCJsRV3ZxipG2L0HhTqIf/H9Hp8ez2EnFlkBnjRGJU2stW3Lj+w=="
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../src/css/index.css" />
     <script
       crossorigin="anonymous"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -44,7 +45,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-color: F7EBE8"></div>
+    <div id="root"></div>
     <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
