--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <!-- <meta content="width=device-width, initial-scale=1" name="viewport" /> -->
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
     <meta content="#000000" name="theme-color" />
     <meta
       content="Periodic Tables - the ultimate restaurant reservation system"
