--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
+    <link href="../public/favicon.ico" rel="icon" />
     <!-- <meta content="width=device-width, initial-scale=1" name="viewport" /> -->
     <meta
       name="viewport"
@@ -13,6 +13,7 @@
       content="Periodic Tables - the ultimate restaurant reservation system"
       name="description"
     />
+    <link rel="stylesheet" href="../src/css/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,700&display=swap"
       rel="stylesheet"
@@ -29,6 +30,7 @@
       integrity="sha512-UyNhw5RNpQaCai2EdC+Js0QL4RlVmiq41DkmCJsRV3ZxipG2L0HhTqIf/H9Hp8ez2EnFlkBnjRGJU2stW3Lj+w=="
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../src/assets/scss/main.scss" />
     <script
       crossorigin="anonymous"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
