--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -30,7 +30,7 @@
       integrity="sha512-UyNhw5RNpQaCai2EdC+Js0QL4RlVmiq41DkmCJsRV3ZxipG2L0HhTqIf/H9Hp8ez2EnFlkBnjRGJU2stW3Lj+w=="
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../src/assets/scss/main.scss" />
+    <!-- <link rel="stylesheet" href="../src/assets/scss/main.scss" /> -->
     <script
       crossorigin="anonymous"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
