--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -30,6 +30,10 @@
       integrity="sha512-UyNhw5RNpQaCai2EdC+Js0QL4RlVmiq41DkmCJsRV3ZxipG2L0HhTqIf/H9Hp8ez2EnFlkBnjRGJU2stW3Lj+w=="
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
     <!-- <link rel="stylesheet" href="../src/assets/scss/main.scss" /> -->
     <script
       crossorigin="anonymous"
